--- a/packages/docs/src/routes/docs/cheat/qwik-react/index.mdx
+++ b/packages/docs/src/routes/docs/cheat/qwik-react/index.mdx
@@ -103,7 +103,7 @@ export function Counter() {
 ```tsx
 export const Clock = component$(() => {
   const seconds = useSignal(0);
-  useVisibleTask$(() => {
+  useDocumentTask$(() => {
     const interval = setInterval(() => {
       seconds.value++;
     }, 1000);
