--- a/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
+++ b/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
@@ -35,6 +35,18 @@ State management is an important part of any app. In Qwik, we can differentiate 
 
 It is important to notice that state in Qwik is not necessarily a local component state, but rather an app state that can be instantiated by any component.
 
+State management is essential in any application. The Qwik framework categorizes state into two main types: `static` and `reactive`.
+
+- `Static state` represents a snapshot of any serializable data captured at a specific moment in time.
+  - Serializable data consists of strings, numbers, objects, arrays, and more.
+  - This state can be paused by the server, transmitted to, and resumed by the browser.
+  - Any non-serializable data must be set to `undefined`, with the responsibility of proper initialization handed over to the client once the state is resumed and the specific component becomes visible (hint: use useVisibleTask()).
+- `Reactive state`, in contrast, can change at any given time.
+  - Reactive state is created using the `useSignal()` or `useStore()` functions.
+  - These functions must be declared within components.
+  - Reactive states are not confined to the component that generated them, as they can be shared among other components across the application.
+  - Reactive states can be passed down via `props` or distributed throughout the application via `context`.
+
 ## `useSignal()`
 
 Use `useSignal()` to create a reactive signal (a form of state). The `useSignal()` takes an initial value and returns a reactive signal.
