--- a/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
+++ b/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
@@ -22,6 +22,7 @@ contributors:
   - gkatsanos
   - adamdbradley
   - mhevery
+  - un33k
 ---
 
 import CodeSandbox from '../../../../../components/code-sandbox/index.tsx';
@@ -30,8 +31,8 @@ import CodeSandbox from '../../../../../components/code-sandbox/index.tsx';
 
 State management is an important part of any app. In Qwik, we can differentiate between two types of state, reactive and static:
 
-1. Static state is anything that can be serialized: a string, number, object, array... anything.
-2. A reactive state on the other hand is created with `useSignal()` or `useStore()`.
+- Static state is anything that can be serialized: a string, number, object, array... anything.
+- A reactive state on the other hand is created with `useSignal()` or `useStore()`.
 
 It is important to notice that state in Qwik is not necessarily a local component state, but rather an app state that can be instantiated by any component.
 
