--- a/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
+++ b/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
@@ -174,7 +174,10 @@ export default component$(() => {
 ```
 </CodeSandbox>
 
-Now, the component will update as expected. This will also track individual values inside of arrays!
+Passing the `{ deep: true }` ensures that the component will update as expected.
+
+> **Note**
+> This will also track individual values inside of arrays!. Use with caution.
 
 ## Computed state
 
