--- a/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
+++ b/packages/docs/src/routes/docs/(qwik)/components/state/index.mdx
@@ -107,7 +107,7 @@ The example above demonstrates how `useStore()` can be implemented in a counter 
 
 ### Recursive values
 
-By default, [`useStore()`](/docs/(qwik)/components/state/index.mdx#usestore) tracks only the `top-level` properties in your store. This means that, in order for an update to be registered, you must modify values at the top-level property.
+By default, [`useStore()`](/docs/src/routes/docs/(qwik)/components/state/index.mdx#usestore) tracks only the `top-level` properties in your store. This means that, in order for an update to be registered, you must modify values at the top-level property.
 
 <CodeSandbox src="/src/routes/demo/state/counter-store-no-track/index.tsx" style={{ height: '10em' }}>
 ```tsx
